--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,10 +8,13 @@
         android:orientation="vertical">
 
         <fragment
-            android:id="@+id/titleFragment"
-            android:name="org.ohmstheresistance.androidtrivia.fragments.TitleFragment"
+            android:id="@+id/navHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation"
+            />
 
     </LinearLayout>
 
