--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,5 +14,20 @@
     <fragment
         android:id="@+id/gameFragment"
         android:name="org.ohmstheresistance.androidtrivia.fragments.GameFragment"
-        android:label="GameFragment" />
+        android:label="GameFragment" >
+        <action
+            android:id="@+id/action_gameFragment_to_gameOverFragment2"
+            app:destination="@id/gameOverFragment2" />
+        <action
+            android:id="@+id/action_gameFragment_to_gameWonFragment"
+            app:destination="@id/gameWonFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameOverFragment2"
+        android:name="org.ohmstheresistance.androidtrivia.fragments.GameOverFragment"
+        android:label="GameOverFragment" />
+    <fragment
+        android:id="@+id/gameWonFragment"
+        android:name="org.ohmstheresistance.androidtrivia.fragments.GameWonFragment"
+        android:label="GameWonFragment" />
 </navigation>
