--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,7 +16,7 @@
         android:name="org.ohmstheresistance.androidtrivia.fragments.GameFragment"
         android:label="GameFragment" >
         <action
-            android:id="@+id/action_gameFragment_to_gameOverFragment2"
+            android:id="@+id/action_gameFragment_to_gameOverFragment"
             app:destination="@id/gameOverFragment2"
             app:popUpTo="@+id/gameFragment"
             app:popUpToInclusive="true" />
@@ -31,7 +31,7 @@
         android:name="org.ohmstheresistance.androidtrivia.fragments.GameOverFragment"
         android:label="GameOverFragment" >
         <action
-            android:id="@+id/action_gameOverFragment2_to_gameFragment"
+            android:id="@+id/action_gameOverFragment_to_gameFragment"
             app:destination="@id/gameFragment"
             app:popUpTo="@+id/titleFragment" />
     </fragment>
@@ -44,4 +44,8 @@
             app:destination="@id/gameFragment"
             app:popUpTo="@+id/titleFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="org.ohmstheresistance.androidtrivia.fragments.AboutFragment"
+        android:label="@string/about_text" />
 </navigation>
