Added a navigation drawer to home(title) fragment to allow user to navigate to otheer frragments in the app != gameFragment, gameWon or gameOver.

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -54,4 +54,8 @@
         android:id="@+id/aboutFragment"
         android:name="org.ohmstheresistance.androidtrivia.fragments.AboutFragment"
         android:label="@string/about_text" />
+    <fragment
+        android:id="@+id/rulesFragment"
+        android:name="org.ohmstheresistance.androidtrivia.fragments.RulesFragment"
+        android:label="RulesFragment" />
 </navigation>
