--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -13,8 +13,7 @@
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
-        android:name="org.ohmstheresistance.androidtrivia.fragments.GameFragment"
-        android:label="GameFragment" >
+        android:name="org.ohmstheresistance.androidtrivia.fragments.GameFragment">
         <action
             android:id="@+id/action_gameFragment_to_gameOverFragment"
             app:destination="@id/gameOverFragment2"
