--- a/app/src/main/res/layout/game_over_fragment.xml
+++ b/app/src/main/res/layout/game_over_fragment.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/gameOverFragment"
             android:layout_width="wrap_content"
-            android:layout_height="362dp"
+            android:layout_height="260dp"
             android:layout_marginStart="@dimen/horizontal_margin"
             android:layout_marginEnd="@dimen/horizontal_margin"
             android:layout_marginBottom="8dp"
@@ -25,6 +25,21 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             app:srcCompat="@drawable/try_again" />
+
+        <TextView
+            android:id="@+id/game_over_text_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/try_again_text"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tryAgainButton"
+            app:layout_constraintTop_toBottomOf="@id/gameOverFragment"/>
 
         <Button
             android:id="@+id/tryAgainButton"
@@ -43,6 +58,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameOverFragment" />
+            app:layout_constraintTop_toBottomOf="@+id/game_over_text_textview" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
